# api-service

./: .env.example  .gitignore  Dockerfile  DockerfileWorker  Pipfile  Readme.md  alembic.ini  graph  memory.db  package.json  pyproject.toml  settings.toml
deploy/: api-service.yaml  celery-worker.yaml  deployment.yaml  redis.yaml  service.yaml
migrations/: env.py
migrations/versions/: b647202409fc_setup_initial_models.py  e4b55d70276d_setup.py
scripts/: medium.html  soup.py  soupout  test.py  test_qdrant.py  upload_file.py
src/api_service/: __main__.py  constants.py
src/api_service/clients/: __init__.py
src/api_service/clients/discord/: __init__.py
src/api_service/clients/llm/: __init__.py
src/api_service/clients/s3/: __init__.py
src/api_service/database/: __init__.py  _database.py
src/api_service/dependencies/: auth.py
src/api_service/middlewares/: logging.py
src/api_service/routers/auth/: __init__.py  types.py
src/api_service/routers/auth/endpoints/: __init__.py  _auth_discord.py  _get_user.py  _login.py  _signup.py  types.py
src/api_service/routers/chat/: __init__.py  types.py
src/api_service/routers/chat/endpoints/: __init__.py  _discord.py  prompts.py  types.py
src/api_service/routers/context/: __init__.py  types.py  utils.py
src/api_service/routers/context/endpoints/: __init__.py  _add_file.py  _create_context.py  _delete_context.py  _get_context.py  _get_documents.py  _remove_file.py  _search_documents.py  types.py
src/api_service/routers/demo/: __init__.py
src/api_service/routers/demo/endpoints/: __init__.py  _chat_rentomojo.py  types.py
src/api_service/routers/embeddings/: __init__.py  types.py
src/api_service/routers/embeddings/utils/: __init__.py
src/api_service/routers/file/: __init__.py  types.py  utils.py
src/api_service/routers/file/endpoints/: __init__.py  _complete_upload.py  _delete_file.py  _get_context_files.py  _get_presigned_url.py  _get_project_files.py  types.py  utils.py
src/api_service/routers/integrations/: __init__.py
src/api_service/routers/playground/: __init__.py
src/api_service/routers/playground/endpoints/: __init__.py  _chat.py  _create_playground.py  _get_chat_history.py  _get_playground.py  _get_playgrounds.py  types.py  utils.py
src/api_service/routers/project/: __init__.py  types.py
src/api_service/routers/project/endpoints/: __init__.py  _create_project.py  _get_project.py  _get_project_by_uuid.py  _get_projects.py  (+2 more)
src/api_service/routers/search/: __init__.py  types.py
src/api_service/routers/source/: __init__.py
src/api_service/settings/: __init__.py
src/api_service/types/: __init__.py  _common.py  _context.py  _project.py  _user.py  embedding_model.py
src/api_service/utils/: __init__.py  _add_guilid.py  _create_project.py  _get_discord_info.py  _get_discord_user.py  auth.py  misc.py
src/db/enums/: __init__.py
src/db/models/: __init__.py
src/embeddings_service/: __init__.py  agentic_chunker.py
(+12 files in other folders)
