[tool.poetry]
name="api-service"
version="0.0.1"
description="API service that powers the web app for ragit"
readme="Readme.md"
authors = ["Akash Mishra <akash@ragit.io>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.12"
fastapi = "*"
boto3 = "*"
uvicorn = "*"
dynaconf = "*"
python-json-logger = "*"
sqlalchemy = {extras = ["asyncio"], version = "*"}
asyncpg = "*"
celery = {extras = ["redis"], version = "*"}
python-jose = {extras = ["cryptography"], version = "*"}
ragit-db = {"git" = "https://akashcodes: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@github.com/akashcodes/ragit-db.git", "branch" = "main"}
groq = "^0.5.0"
openai = "^1.29.0"
pgvector = "^0.2.5"
arq = "^0.26.0"
langchain = "^0.2.4"

[tool.poetry.dev-dependencies]
black = "*"
mypy = "*"
flake8 = "*"
types-requests = "*"
isort = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
module = [
    "dynaconf",
    "jose",
    "boto3",
    "ragit_db.*",
    "botocore.*",
    "fastembed.*",
    "celery.*",
]
ignore_missing_imports = true

[tool.poetry.scripts]
api-service = "api_service.__main__:main"
